# typefuckery

./: .gitignore  LICENSE.md  dune-project  flake.nix
lib/: abilities.ml  card_dsl.ml  card_dsl.mli  cards.ml  condition.ml  condition.mli  core.ml  core.mli  division_intf.ml  division_intf.mli  divisions.ml  divisions.mli  dune  effects.mli  engine.ml  engine.mli  int.ml  int.mli  language_registry.ml  language_registry.mli  lore.ml  lore.mli  phrases_common.ml  registry.ml  registry.mli  targets.ml  targets.mli  to_json.ml  to_json.mli  to_string.ml  to_string.mli
lib/divisions/: ada.ml  division_helper.ml  haskell.ml  institute.ml  ocaml.ml  ocaml.mli  rust.ml
lib/languages/: ada_phrases.ml  english_phrases.ml  haskell_phrases.ml  ocaml_phrases.ml  pidgin_english_phrases.ml  rust_phrases.ml
test/: crazy_cards.ml  divisions.ml  dsl.ml  dune  example_cards.ml  json.ml  noncore_division.ml  prolog_division.ml  registry.ml  registry_errors.ml  to_string_functor.ml  util.ml
test/golden/: ada_entity_buffer_overflow.txt  ada_json_haskell_personnel_haskell_lazy_evaluator.json  ada_json_rust_procedure_lifetime_extension.json  ada_personnel_ada_safety_engineer.txt  ada_personnel_borrow_checker_chaplain.txt  ada_personnel_ocaml_module_architect.txt  containment_override.txt  crazy_entity_cascading_failure.txt  crazy_entity_reality_fragmenter.txt  crazy_event_diplomatic_intervention.txt  crazy_event_selective_purge.txt  crazy_personnel_adaptive_defender.txt  crazy_personnel_card_manipulation_specialist.txt  crazy_personnel_conditional_operative.txt  crazy_personnel_custom_effect_engineer.txt  crazy_personnel_deployment_coordinator.txt  crazy_personnel_omni_responsive_agent.txt  crazy_personnel_resource_redistributor.txt  crazy_personnel_temporal_strategist.txt  crazy_procedure_coordinated_assault.txt  crazy_procedure_opportunistic_tactician.txt  crazy_procedure_quantum_entangler.txt  crazy_procedure_sector_lockdown.txt  (+129 more)
